--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Alexander Amirov",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^2.5.2"
+    "ejs": "^2.5.2",
+    "sqlite3": "^3.1.8"
   }
 }
