--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web framework for node js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "Alexander Amirov",
   "license": "ISC",
